# jetbot_vlm_navigator

./: README.md  jetbot_driver_code.py
jetbot_vlm_nav/: CMakeLists.txt  EXPLORATION_MODE.md  QUICKSTART.md  examples.sh  package.xml  requirements.txt  setup.py  setup.sh  start_explorer.sh  test_setup.py
jetbot_vlm_nav/config/: vlm_params.yaml
jetbot_vlm_nav/launch/: vlm_detector.launch.py  vlm_navigator.launch.py  vlm_target_object.launch.py
jetbot_vlm_nav/resource/: jetbot_vlm_nav
jetbot_vlm_nav/src/: vlm_detector_node.py  vlm_navigator_node.py  vlm_target_object.py
